--- a/src/app/list-penguin/list-penguin.component.html
+++ b/src/app/list-penguin/list-penguin.component.html
@@ -31,7 +31,8 @@
 
   <div class="header"><p class="headerText">RoadMap</p></div>
 
-  <div class="roadmap"><img src="../../assets/roadmap.png" width="500" /></div>
+  <div class="roadmap"></div>
+
   <div class="header"><p class="headerText">The Collection</p></div>
 
   <cdk-virtual-scroll-viewport itemSize="50" class="viewport">
