--- a/src/app/list-penguin/list-penguin.component.html
+++ b/src/app/list-penguin/list-penguin.component.html
@@ -48,13 +48,15 @@
   </cdk-virtual-scroll-viewport>
 
   <div class="footer">
-    <a href="https://opensea.io/collection/penguin-party-club/"
+    <a href="https://opensea.io/collection/penguin-party-club/" target="_blank"
       ><div class="opensea"></div
     ></a>
-    <a href="https://www.instagram.com/thepenguinsnft/"
+    <a href="https://www.instagram.com/thepenguinsnft/" target="_blank"
       ><div class="instagram"></div
     ></a>
-    <a href="https://www.muse.place/thepenguinsnft"><div class="muse"></div></a>
+    <a href="https://www.muse.place/thepenguinsnft" target="_blank"
+      ><div class="muse"></div
+    ></a>
   </div>
   <div class="header"></div>
 </div>
