--- a/src/app/list-penguin/list-penguin.component.html
+++ b/src/app/list-penguin/list-penguin.component.html
@@ -2,33 +2,34 @@
   <div class="header">
     <p class="headerText">The Penguin NFT</p>
   </div>
-  <ul>
-    <li>
-      <p>
-        The Penguins NFT is a programmatically generated 1/1 - both exists in
-        the collection.
-      </p>
-    </li>
-    <li>
-      <p>
-        The proyect will add some rarity spects to penguins increasing rarity
-      </p>
-    </li>
-    <li>
-      <p>
-        All owners will have premium access to new events will be prepare for
-        the community
-      </p>
-    </li>
-    <li>
-      <p>
-        All the support received will be duly appreciated, each NFT in the
-        collection will be rewarded with totally free new NFTs from the
-        collection and new future collections.
-      </p>
-    </li>
-  </ul>
-
+  <div style="padding-left: 45px">
+    <ul>
+      <li>
+        <p>
+          The Penguins NFT is a programmatically generated 1/1 - both exists in
+          the collection.
+        </p>
+      </li>
+      <li>
+        <p>
+          The proyect will add some rarity spects to penguins increasing rarity
+        </p>
+      </li>
+      <li>
+        <p>
+          All owners will have premium access to new events will be prepare for
+          the community
+        </p>
+      </li>
+      <li>
+        <p>
+          All the support received will be duly appreciated, each NFT in the
+          collection will be rewarded with totally free new NFTs from the
+          collection and new future collections.
+        </p>
+      </li>
+    </ul>
+  </div>
   <div class="header"><p class="headerText">RoadMap</p></div>
 
   <div class="roadmap"></div>
@@ -58,5 +59,15 @@
       ><div class="muse"></div
     ></a>
   </div>
+
+  <div class="header">
+    <div style="padding-left: 45px">
+      <h1>As Seen On:</h1>
+      <a href="https://nftcalendar.io/" target="_blank"
+        ><div class="nftcalendar"></div
+      ></a>
+    </div>
+  </div>
+
   <div class="header"></div>
 </div>
