--- a/src/app/list-penguin/list-penguin.component.html
+++ b/src/app/list-penguin/list-penguin.component.html
@@ -63,8 +63,8 @@
   <div class="header">
     <div style="padding-left: 45px">
       <h1>As Seen On:</h1>
-      <a href="https://nftcalendar.io/" target="_blank"
-        ><div class="nftcalendar"></div
+      <a href="https://www.thenftmeter.com/" target="_blank"
+        ><div class="nftmeter"></div
       ></a>
     </div>
   </div>
