--- a/src/app/list-penguin/list-penguin.component.css
+++ b/src/app/list-penguin/list-penguin.component.css
@@ -105,11 +105,11 @@
   background-image: url("../../assets/muse.png");
 }
 
-.nftcalendar {
+.nftmeter {
   width: 300px;
-  height: 225px;
+  height: 100px;
   margin-bottom: 35px;
   background-size: contain;
   background-repeat: no-repeat;
-  background-image: url("../../assets/nftcalendar-logo.png");
+  background-image: url("../../assets/nftmeter.png");
 }
