--- a/src/styles.css
+++ b/src/styles.css
@@ -2,20 +2,241 @@ body {
   border: none !important;
   margin: 0px !important;
   padding: 0 !important;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  background-image: url("assets/background.png");
   background-color: #3f2c6b; /**#2f1d58;*/
-  width: 100%;
-  height: 80vh;
 }
 
 html,
 body {
+  width: 100%;
   height: 100%;
 }
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+.body {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+}
 p {
   padding: 0px;
   margin: 10px;
+}
+
+@media only screen and (max-width: 1249px) {
+  /* For tablets: */
+  body {
+    background-size: 200%;
+  }
+
+  [class="headerText"] {
+    font-size: 60px;
+    color: #ffeeae;
+    font-weight: 700;
+    text-align: center;
+  }
+  .cdk-virtual-scroll-viewport {
+    /**border: 8px solid #1d1236;**/
+  }
+
+  .box {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;
+  }
+
+  [class*="header-"] {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  [class*="item-"] {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .item-2 {
+    margin-bottom: 35px;
+    height: 1800px;
+    background-position: center top;
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    background-image: url("assets/roadmap.png");
+  }
+
+  .item-3 {
+    justify-self: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    height: 60vh;
+    width: 580px;
+  }
+  .item-3::-webkit-scrollbar {
+    display: none;
+  }
+}
+@media only screen and (min-width: 1250px) {
+  /* For desktop: */
+
+  [class="headerText"] {
+    font-size: 60px;
+    color: #ffeeae;
+    font-weight: 700;
+    text-align: center;
+  }
+  .cdk-virtual-scroll-viewport {
+    /**border: 8px solid #1d1236;**/
+  }
+
+  .box {
+    display: grid;
+    grid-template-rows: repeat(auto-fill, 6);
+    grid-template-columns: 50%;
+    margin-bottom: 100px;
+  }
+
+  [class*="header-"] {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  [class*="item-"] {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .header-1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .item-1 {
+    margin: 35px;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 2;
+    grid-row-end: 2;
+  }
+  .header-2 {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 1;
+  }
+  .item-2 {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 6;
+    margin-bottom: 35px;
+    background-position: center top;
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    background-image: url("assets/roadmap.png");
+  }
+  .header-3 {
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 3;
+    grid-row-end: 3;
+  }
+  .item-3 {
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 4;
+    grid-row-end: 4;
+    justify-self: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    height: 60vh;
+    width: 580px;
+  }
+  .item-3::-webkit-scrollbar {
+    display: none;
+  }
+  .item-4 {
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 5;
+    grid-row-end: 5;
+  }
+}
+
+.footer {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  bottom: 0;
+  width: 100%;
+  padding: 5px;
+  border-top: 8px solid #1d1236;
+  border-bottom: 8px solid #1d1236;
+  -webkit-text-stroke: 2px black;
+  -webkit-box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 5px #000000;
+  background-color: #3f2c6b;
+}
+
+.opensea {
+  margin: 5px;
+  width: 130px;
+  height: 30px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("assets/opensea.png");
+}
+
+.instagram {
+  margin: 5px;
+  margin-left: 20px;
+  width: 130px;
+  height: 30px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("assets/instagram.png");
+}
+
+.muse {
+  width: 130px;
+  height: 30px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("assets/muse.png");
+}
+
+.nftmeter {
+  width: 300px;
+  height: 110px;
+  margin-bottom: 35px;
+  background-position: center top;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+  background-image: url("assets/nftmeter.png");
 }
