--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <div class="body">
   <app-list-penguin></app-list-penguin>
+  <div class="footer">
+    <a href="https://opensea.io/collection/penguin-party-club/" target="_blank"
+      ><div class="opensea"></div
+    ></a>
+    <a href="https://www.instagram.com/thepenguinsnft/" target="_blank"
+      ><div class="instagram"></div
+    ></a>
+    <a href="https://www.muse.place/thepenguinsnft" target="_blank"
+      ><div class="muse"></div
+    ></a>
+  </div>
 </div>
